syntax = "proto3";
package app_node;

option go_package = "github.com/nathanieltornow/PMLog/order_repl_framework/app_node/nodepb";

service Node {
  rpc Register(RegisterRequest) returns (Empty);
  rpc Prepare(stream BatchedPrep) returns (Empty);
}

message BatchedPrep {
  repeated Prep preps = 1;
}

message Prep {
  uint64 localToken = 1;
  uint32 color = 2;
  string content = 3;
}

message RegisterRequest {
  string IP = 1;
}

message Empty {}